# pyfort

./: .gitignore  LICENSE  README.md  meson.build  pyproject.toml
.github/workflows/: ci.yaml  publish-pypi.yaml  testpypi-release.yaml
ci/: environment.yml
pyfort/: __init__.py
src/: mo_fib.f90
